--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,13 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "==3.12.3"
 streamlit = "^1.33.0"
+pydantic = {extras = ["email"], version = "^2.7.0"}
+pytest = "^8.1.1"
 
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.4.1"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
