--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,18 @@ python = "==3.12.3"
 streamlit = "^1.33.0"
 pydantic = {extras = ["email"], version = "^2.7.0"}
 pytest = "^8.1.1"
+selenium = "^4.19.0"
 
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.1"
 isort = "^5.13.2"
+taskipy = "^1.12.2"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.taskipy.tasks]
+run = "streamlit run src/app.py"
+test = "pytest tests -v"
