--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ streamlit = "^1.33.0"
 pydantic = {extras = ["email"], version = "^2.7.0"}
 pytest = "^8.1.1"
 selenium = "^4.19.0"
+pandas = "^2.2.2"
+openpyxl = "^3.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
