--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,24 @@ jobs:
     build:
 
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                python-version: ["3.10", "3.11", "3.12"]
 
         steps:
-            - name: Our first CI
-              run: echo "hello world!"
+            - uses: actions/checkout@v4
+            - name: Set up Python ${{ matrix.python-version }}
+              uses: actions/setup-python@v4
+              with:
+                python-version: ${{ matrix.python-version }}
 
-            - name: Print files
-              run: echo $(ls)
+            - name: Display Python version
+              run: python -c "import sys; print(sys.version)"
 
-            - name: Print path
-              run: echo $(pwd)
+            - name: Install dependencies with requirements.txt
+              run: |
+                python -m pip install --upgrade pip
+                pip install -r requirements.txt
+
+            - name: Test with pytest
+              run: pytest tests/test_contrato.py
