--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,10 @@
 name: implementing-ci-pipeline
 run-name: ${{ github.actor }} is implementing CI-CD in the pipeline
 
-on: [push]
+on:
+    pull_request:
+        branches: [main]
+        types: [opened, synchronize]
 
 jobs:
     build:
@@ -12,7 +15,9 @@ jobs:
                 python-version: ["3.10", "3.11", "3.12"]
 
         steps:
-            - uses: actions/checkout@v4
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
             - name: Set up Python ${{ matrix.python-version }}
               uses: actions/setup-python@v4
               with:
@@ -21,10 +26,10 @@ jobs:
             - name: Display Python version
               run: python -c "import sys; print(sys.version)"
 
-            - name: Install dependencies with requirements.txt
+            - name: Install dependencies
               run: |
                 python -m pip install --upgrade pip
                 pip install -r requirements.txt
 
-            - name: Test with pytest
+            - name: Run tests with pytest
               run: pytest tests/test_contrato.py
