--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,34 +2,37 @@ name: implementing-ci-pipeline
 run-name: ${{ github.actor }} is implementing CI-CD in the pipeline
 
 on:
-    pull_request:
-        branches: [main]
-        types: [opened, synchronize]
+  push:
+    branches: [dev]
+
+  pull_request:
+    branches: [main]
+    types: [opened, synchronize]
 
 jobs:
-    build:
+  build:
 
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                python-version: ["3.10", "3.11", "3.12"]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11", "3.12"]
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-            - name: Set up Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v4
-              with:
-                python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
-            - name: Display Python version
-              run: python -c "import sys; print(sys.version)"
+      - name: Display Python version
+        run: python -c "import sys; print(sys.version)"
 
-            - name: Install dependencies
-              run: |
-                python -m pip install --upgrade pip
-                pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-            - name: Run tests with pytest
-              run: pytest tests/test_contrato.py
+      - name: Run tests with pytest
+        run: pytest tests/test_contrato.py
