--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ pytest = "^8.1.1"
 selenium = "^4.19.0"
 pandas = "^2.2.2"
 openpyxl = "^3.1.2"
+python-dotenv = "^1.0.1"
+sqlalchemy = "^2.0.29"
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
