--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ email_validator==2.1.1
 et-xmlfile==1.1.0
 gitdb==4.0.11
 GitPython==3.1.43
+greenlet==3.0.3
 h11==0.14.0
 idna==3.7
 iniconfig==2.0.0
@@ -31,6 +32,7 @@ pillow==10.3.0
 pluggy==1.4.0
 protobuf==4.25.3
 psutil==5.9.8
+psycopg2-binary==2.9.9
 pyarrow==15.0.2
 pydantic==2.7.0
 pydantic_core==2.18.1
@@ -39,6 +41,7 @@ Pygments==2.17.2
 PySocks==1.7.1
 pytest==8.1.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 referencing==0.34.0
 requests==2.31.0
@@ -50,6 +53,7 @@ six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
+SQLAlchemy==2.0.29
 streamlit==1.33.0
 taskipy==1.12.2
 tenacity==8.2.3
