--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ openpyxl = "^3.1.2"
 python-dotenv = "^1.0.1"
 sqlalchemy = "^2.0.29"
 psycopg2-binary = "^2.9.9"
+sentry-sdk = "^1.45.0"
 
 
 [tool.poetry.group.dev.dependencies]
